--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,36 @@
-header{
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Arial, "Times New Roman", Serif;
+}
 
-  display: flex;
+header {
+
+    display: flex;
     padding-bottom: 3%;
-}
-#headertitle{
-
-  width: 50%;
-
+    background: #33ccff;
 }
 
-#headerimage{
-  height: 100%;
-  width: 50%;
+#headertitle {
+
+    width: 50%;
+
 }
-.topnav{
+
+#headerimage {
     height: 100%;
+    width: 50%;
+}
+
+.topnav {
+    height: 100%;
+    width: 100%;
     background-color: rgb(51, 51, 51);
     overflow: hidden;
-    border-radius: 25px;
+
 }
 
-.topnav a{
+.topnav a {
     font-size: 1.5em;
     color: #FFF;
     padding-left: 3%;
@@ -28,34 +38,33 @@ header{
     padding-right: 30%;
 }
 
-table{
+h2{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+a {
+    text-decoration: none;
+}
+
+table {
     font-size: 3em;
     color: #333;
-    border:3px solid #000000;
+    border: 3px solid #000000;
+    border-radius: 10px;
     width: 700px;
     height: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
-/*
-.counting, .counting > td{
-    color: blue;
-    font-size: 50%;
-    border: solid #fff;
-    height: 3px !important;
-    width: 4px !important;
-    background: #FFF !important;
-    border: 3px solid #000;
 
-}
-*/
-
-
-
-tr:nth-child(odd) td:nth-child(even), tr:nth-child(even) td:nth-child(odd){
+tr:nth-child(odd) td:nth-child(even), tr:nth-child(even) td:nth-child(odd) {
     background: #000000;
     height: 70px;
     width: 70px;
 }
-tr:nth-child(even) td:nth-child(odd), tr:nth-child(odd) td:nth-child(even){
+
+tr:nth-child(even) td:nth-child(odd), tr:nth-child(odd) td:nth-child(even) {
     background: #333;
     height: 70px;
     width: 70px;
